--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,16 @@
 <resources>
 
     <string name="app_name">SEACO Neuropsych</string>
-    <string name="prospective_initial_text">At the end of the games we will show you four
+    <string name="intro_button">START</string>
+    <string name="intro_records_button">Records</string>
+    <string name="intro_about_button">About</string>
+    <string name="prospective_initial_text">        Welcome to your first task! %1$s %1$s
+        At the end of the games we will show you four
         coloured shapes and ask you to touch a shape.
         %1$s However, to test your memory, we want you to actually
         touch the %2$s instead.</string>
+    <string name="prospective_header">PROSPECTIVE MEMORY TEST</string>
+    <string name="prospective_header_count">1 OF 4</string>
     <string name="prospective_end_text">Now touch the %s and click Next.</string>
     <string name="prospective_end_skip_text">Skip</string>
     <string name="shape1">Red Octagon</string>
@@ -41,6 +47,11 @@
     <string name="prospective_results_time_initial_final">Time elapsed since initial screen:\u0020</string>
     <string name="prospective_results_time_end_visible">Time the final screen was visible:\u0020</string>
     <string name="title_activity_prospective_result">prospective_result</string>
+
+    <string name="pair_intro_title">PAIR MATCHING</string>
+    <string name="pair_header_count">2 OF 4</string>
+    <string name="pair_help_text">Open the cards and find their matches.</string>
+    <string name="pair_intro_desc">Welcome to your second task! \n\nIn this game, you have to match as many cards as possible.</string>
     <string name="title_activity_pair_level1">pair_level1</string>
     <string name="title_activity_pair_level2">pair_level2</string>
     <string name="title_activity_fluid_main">fluid_main</string>
@@ -51,7 +62,7 @@
     <string name="unable_try_button">I am unable to try this</string>
     <string name="try_next_time">Please try it next time. It is fun to play!</string>
     <string name="exit_button">Exit</string>
->                                <string-array name="questionList">
+>                                    <string-array name="questionList">
         <item>Add the following numbers together: 1 2 3 4 5 - is the answer?</item>
         <item>Which number is the largest?</item>
         <item>Bud is to flower as child is to?</item>
@@ -188,11 +199,8 @@
     <string name="title_activity_end_branch">EndBranch</string>
     <string name="title_activity_end">EndActivity</string>
     <string name="title_activity_lights_main">Lights_main</string>
-
     <string name="lights_start_message">In the next section, you will be shown a picture of a small house, like the one below. Some of the lights are switched on. Remember which windows are lit up.\n\nPress "Next" when you are ready to start.</string>
     <string name="instruction">Please touch the windows that had the lights on. When you have pressed all the windows that you need to, press "Next".</string>
-
-
     <string name="window1">First window</string>
     <string name="window2">Second window</string>
     <string name="window3">Third window</string>
@@ -209,5 +217,6 @@
     <string name="window14">Fourteenth window</string>
     <string name="window15">Fifteenth window</string>
     <string name="window16">Sixteenth window</string>
+    <string name="title_activity_pair_intro">pair_intro</string>
 
 </resources>
